# pythisthat

./: .gitignore  Makefile  pyproject.toml
examples/: jupyter.ipynb
src/thisthat/: line.py
