[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "this"
version = "0.0.1"
authors = [
  { name="Piotr Mardziel", email="piotrm@gmail.com" },
]
description = "Reflection/inspection utilities."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Artistic License 2.0",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/piotrm0/this"
"Bug Tracker" = "https://github.com/piotrm0/this/issues"
