[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "thisthat"
version = "0.0.1"
authors = [
  { name="Piotr Mardziel", email="piotrm@gmail.com" },
]
description = "Reflection/inspection utilities."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: Implementation :: CPython",
    "License :: OSI Approved :: Artistic License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/piotrm0/thisthat"
"Bug Tracker" = "https://github.com/piotrm0/thisthat/issues"
